# aptos-rust-sdk

crates/aptos-rust-sdk/: Cargo.toml
crates/aptos-rust-sdk-types/: Cargo.toml
crates/aptos-rust-sdk-types/src/api_types/: mod.rs  transaction.rs  type_tag.rs  u256.rs
crates/aptos-rust-sdk/src/: lib.rs
crates/aptos-rust-sdk/src/account/: account_key.rs  mod.rs
crates/aptos-rust-sdk/src/client/: mod.rs  rest_api.rs
crates/examples/: Cargo.toml
crates/examples/src/: account_example.rs  quote_example.rs  view_example.rs
