[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
aptos-rust-sdk = { workspace = true }
aptos-rust-sdk-types = { workspace = true }
aptos-crypto = { workspace = true }
aptos-bcs = { workspace = true }
hex.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true }

[[bin]]
name = "type_parsing_example"
path = "src/type_parsing_example.rs"

[[bin]]
name = "quote_example"
path = "src/quote_example.rs"

[[bin]]
name = "view_example"
path = "src/view_example.rs"
